crates/rome_formatter/tests/specs/prettier/range/class-declaration.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: class-declaration.js

---
# Input
```js


class   <<<PRETTIER_RANGE_START>>> a {
  b(   ) {}<<<PRETTIER_RANGE_END>>>
}

let    x
```

# Output
```js
class   <<<PRETTIER_RANGE_START>>> a {
  b(   ) {}<<<PRETTIER_RANGE_END>>>
}

let x;

```

# Errors
```
error[SyntaxError]: class declarations must have a name
  ┌─ class-declaration.js:3:1
  │
3 │ class   <<<PRETTIER_RANGE_START>>> a {
  │ ^^^^^^^^

error[SyntaxError]: expected `'{'` but instead found `<<`
  ┌─ class-declaration.js:3:9
  │
3 │ class   <<<PRETTIER_RANGE_START>>> a {
  │         ^^ unexpected

error[SyntaxError]: expected a semicolon for a class property, but found none
  ┌─ class-declaration.js:3:12
  │
3 │ class   <<<PRETTIER_RANGE_START>>> a {
  │            ^^^^^^^^^^^^^^^^^^^^

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '>'
  ┌─ class-declaration.js:3:32
  │
3 │ class   <<<PRETTIER_RANGE_START>>> a {
  │                                ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a semicolon for a class property, but found none
  ┌─ class-declaration.js:3:36
  │
3 │ class   <<<PRETTIER_RANGE_START>>> a {
  │                                    ^^

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '{'
  ┌─ class-declaration.js:3:38
  │
3 │ class   <<<PRETTIER_RANGE_START>>> a {
  │                                      ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '<<'
  ┌─ class-declaration.js:4:12
  │
4 │   b(   ) {}<<<PRETTIER_RANGE_END>>>
  │            ^^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a semicolon for a class property, but found none
  ┌─ class-declaration.js:4:15
  │
4 │   b(   ) {}<<<PRETTIER_RANGE_END>>>
  │               ^^^^^^^^^^^^^^^^^^

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '>'
  ┌─ class-declaration.js:4:33
  │
4 │   b(   ) {}<<<PRETTIER_RANGE_END>>>
  │                                 ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here


```


